# power_distribution_unit

./: .gitignore  README.md
doc/: front_panel_overview
pcb/clamp_sensor/: sensor-B_Cu.gbr  sensor-B_Mask.gbr  sensor-B_Paste.gbr  sensor-B_Silkscreen.gbr  sensor-Edge_Cuts.gbr  sensor-F_Cu.gbr  sensor-F_Mask.gbr  sensor-F_Paste.gbr  sensor-F_Silkscreen.gbr  sensor-NPTH.drl  sensor-PTH.drl  sensor-job.gbrjob  sensor.kicad_pcb  sensor.kicad_pro  sensor.kicad_sch  sensor.net
pcb/dc_power_headers/: dc_power_headers-B_Cu.gbr  dc_power_headers-B_Mask.gbr  dc_power_headers-B_Paste.gbr  dc_power_headers-B_Silkscreen.gbr  dc_power_headers-Edge_Cuts.gbr  dc_power_headers-F_Cu.gbr  dc_power_headers-F_Mask.gbr  dc_power_headers-F_Paste.gbr  dc_power_headers-F_Silkscreen.gbr  dc_power_headers-NPTH.drl  dc_power_headers-PTH.drl  dc_power_headers-job.gbrjob  dc_power_headers.kicad_pcb  dc_power_headers.kicad_prl  dc_power_headers.kicad_pro  dc_power_headers.kicad_sch  dc_power_headers.net
pcb/piso/: piso.kicad_pcb  piso.kicad_prl  piso.kicad_pro  piso.kicad_sch  piso.net
pcb/sipo/: #auto_saved_files#  _autosave-sipo.kicad_sch  sipo-B_Cu.gbr  sipo-B_Mask.gbr  sipo-B_Paste.gbr  sipo-B_Silkscreen.gbr  sipo-Edge_Cuts.gbr  sipo-F_Cu.gbr  sipo-F_Mask.gbr  sipo-F_Paste.gbr  sipo-F_Silkscreen.gbr  sipo-NPTH.drl  sipo-PTH.drl  sipo-job.gbrjob  sipo.kicad_pcb  sipo.kicad_prl  sipo.kicad_pro  sipo.net  (+1 more)
src/Raspberry_Pi/relay/32_channels/lib/: CMakeLists.txt
src/Raspberry_Pi/relay/32_channels/lib/include/rc/: relay_32.h
src/Raspberry_Pi/relay/32_channels/lib/src/: relay.c
(+32 files in other folders)
